@@ -1,1 +1,1 @@
-DIST noscript-2.6.9.31.xpi 548220 SHA256 63adb9cad3f57d40777fd27f2841a0c877050793ff3ca6725ef3d12e48e16435 SHA512 5ed8e3aa6d71dbf2ee4b9cbeb3ab1efbaadaae8c12a352a37d839729f90665fd18d3a99219c6120e2b4ced2e5294eb070819b823c2653f4cc10e44686dcb8d80 WHIRLPOOL 88055fb7ca1f9f97c863521728ef88e7e72a5dee87e7474ab81b66192f806200f674e9f95a0464732bbaad7b01077fb58791bab23653d3f7920968a7c13ebdc6
+DIST noscript-2.6.9.33.xpi 548866 SHA256 f8c890fecc3373a311f06eacb8c87f2006cca0cf01eacc92921ce1571de65018 SHA512 72ee4bbc45b7fe4edb552dfbcf9b6c510c32980fcb501f065cabaf70f8f8906c377422f51e80303c0b43eed1ef1d7cb8ac5fcff91f4b38fa9204bc18804191bb WHIRLPOOL 79c3a667ead7b8b97651c6b88fe8d2679c467b7243016725453849aafdc2ce12908b912de7568e0c68d67ae79d55657e2e4605f1e929cd1873ca57d9f140d060
