@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*noscript-2.6.9.33 (33 Jul 2015)
+
+  31 Jul 2015; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *noscript-2.6.9.31 (17 Jul 2015)
 
   17 Jul 2015; Martin Väth <martin@mvath.de>:
